# insurance-mediation

./: README.md  pyproject.toml
notebooks/: demo_fca_mediation.py
src/insurance_mediation/: __init__.py  core.py  estimands.py  models.py  report.py  sensitivity.py
src/insurance_mediation/estimators/: __init__.py  regression.py
tests/: conftest.py  test_core.py  test_estimands.py  test_estimators.py  test_models.py  test_report.py  test_sensitivity.py
