[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-mediation"
version = "0.1.0"
description = "Causal mediation analysis for insurance pricing fairness — decomposes postcode effects into legitimate and potentially discriminatory components"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" },
]
keywords = ["insurance", "causal inference", "mediation analysis", "fairness", "FCA", "pricing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "statsmodels>=0.14",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
viz = [
    "matplotlib>=3.7",
    "networkx>=3.0",
]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-mediation"
Repository = "https://github.com/burning-cost/insurance-mediation"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_mediation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
